Update .gitignore: add generated files or remove old.

--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,8 @@
 /bin/spell-checker-iface
 /bin/spell.bash
 /bin/translate-Vered-XML
+/docbook.css
+/index.xhtml
 /lib/
+/shlomif-putting-cards-on-the-table-2019-2020
 /tslint.json
