Update .gitignore: add generated files or remove old.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 /bin/spell.bash
 /bin/translate-Vered-XML
 /docbook.css
+/eslint-ts.json
 /index.xhtml
 /lib/
 /shlomif-putting-cards-on-the-table-2019-2020
