--- a/.tidyallrc
+++ b/.tidyallrc
@@ -1,8 +1,8 @@
-[PerlTidy]
-select = **/*.{pl,pm,t}
-argv = -ci=4 -bl -cti=0
-
 [PerlCritic]
+select = **/*.{pl,pm,t}
+
+[PerlTidy]
+argv = -ci=4 -bl -cti=0 --character-encoding=none
 select = **/*.{pl,pm,t}
 
 [TestCount]
